Fix bug không hòa khi lặp lại 3 lần