@@ -19,17 +19,15 @@ public class Move {
     }
 
     public static Move parseMove(String moveStr, Board board, String currentTurn) {
-        Position end = null;
+        Position end;
         ArrayList<Piece> possiblePieces = new ArrayList<>();
         int pieceType;
 
-        // Loại bỏ dấu x (ăn quân) hoặc dấu + (chiếu tướng) khỏi nước đi
         moveStr = moveStr.replace("x", "").replace("+", "").replace("#", "");
         
         int start_row = -1;
         int start_col = -1;
 
-        // Xử lý nước đi nếu là quân tốt (không có ký tự đại diện)
         if (moveStr.equals("O-O")) {
             start_row = currentTurn.equals("white") ? 7 : 0;
             end = new Position(start_row, 7);
@@ -42,46 +40,43 @@ public class Move {
         } else {
             if (Character.isLowerCase(moveStr.charAt(0))) {
                 // Ví dụ: "e4"
-                switch (moveStr.length()) {
-                    case 2:
-                        end = new Position(8 - (moveStr.charAt(1) - '0'), moveStr.charAt(0) - 'a');
-                        break;
-                    case 3:
+                end = switch (moveStr.length()) {
+                    case 2 -> new Position(8 - (moveStr.charAt(1) - '0'), moveStr.charAt(0) - 'a');
+                    case 3 -> {
                         start_col = moveStr.charAt(0) - 'a';
-                        end = new Position(8 - (moveStr.charAt(2) - '0'), moveStr.charAt(1) - 'a');
-                        break;
-                }
+                        yield new Position(8 - (moveStr.charAt(2) - '0'), moveStr.charAt(1) - 'a');
+                    }
+                    default -> null;
+                };
 
                 pieceType = 0; // Quân tốt (pawn)
             } else {
-                // Xác định loại quân từ ký tự đầu tiên
+
                 char pieceChar = moveStr.charAt(0);
-                switch (moveStr.length()) {
-                    case 3:
-                        end = new Position(8 - (moveStr.charAt(2) - '0'), moveStr.charAt(1) - 'a');
-                        break;
-                    case 4:
+                end = switch (moveStr.length()) {
+                    case 3 -> new Position(8 - (moveStr.charAt(2) - '0'), moveStr.charAt(1) - 'a');
+                    case 4 -> {
                         if (Character.isDigit(moveStr.charAt(1))) {
                             start_row = 8 - (moveStr.charAt(1) - '0');
                         } else {
-                            start_col =  moveStr.charAt(1) - 'a';
+                            start_col = moveStr.charAt(1) - 'a';
                         }
-                        end = new Position(8 - (moveStr.charAt(3) - '0'), moveStr.charAt(2) - 'a');
-                        break;
-                }
+                        yield new Position(8 - (moveStr.charAt(3) - '0'), moveStr.charAt(2) - 'a');
+                    }
+                    default -> null;
+                };
 
-                switch (pieceChar) {
-                    case 'N': pieceType = 1; break; // Knight
-                    case 'B': pieceType = 2; break; // Bishop
-                    case 'R': pieceType = 3; break; // Rook
-                    case 'Q': pieceType = 4; break; // Queen
-                    case 'K': pieceType = 5; break; // King
-                    default:
-                        throw new IllegalArgumentException("Invalid piece type: " + pieceChar);
-                }
+                pieceType = switch (pieceChar) {
+                    case 'N' -> 1; // Knight
+                    case 'B' -> 2; // Bishop
+                    case 'R' -> 3; // Rook
+                    case 'Q' -> 4; // Queen
+                    case 'K' -> 5; // King
+                    default -> throw new IllegalArgumentException("Invalid piece type: " + pieceChar);
+                };
             }
         }
-        // Tìm quân cờ có thể di chuyển đến vị trí đích
+
         for (Piece piece : board.pieceList) {
             if ((start_row == -1 || start_row == piece.position.row) && (start_col == -1 || start_col == piece.position.col)) {
                 if (piece.type == pieceType && piece.color.equals(currentTurn)) {
@@ -98,7 +93,7 @@ public class Move {
             throw new IllegalArgumentException("No valid piece found for move: " + moveStr);
         }
 
-        Piece movingPiece = possiblePieces.get(0);
+        Piece movingPiece = possiblePieces.getFirst();
         return new Move(movingPiece.position, end);
     }
 
